--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hamburger-react": "^2.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-file-download": "^0.3.5",
     "react-player": "^3.3.2",
     "react-router-dom": "^7.9.1"
   },
