--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-file-download": "^0.3.5",
+    "react-multi-carousel": "^2.8.6",
     "react-player": "^3.3.2",
     "react-router-dom": "^7.9.1"
   },
